--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Hayk Foler</title>
+  <title>Romi · Space</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Yomogi&display=swap" rel="stylesheet">
@@ -33,7 +33,7 @@
   </div>
   <div class="content">
     <div class="content__inner" id="tab-1">
-        <img src="https://imgur.com/FVDaYMK.mp4"><img src="https://imgur.com/lA3Cb36.mp4"><img src="https://imgur.com/lA3Cb36.mp4">
+        <img src="http://i.imgur.com/8XkZEe5h.gif" width="200" height="400"><img src="http://i.imgur.com/wWyr0PTh.gif" width="200" height="400"><img src="http://i.imgur.com/Gn68TByh.gif" width="200" height="400">
       </div>
     </div>
     <div class="content__inner" id="tab-2">
