--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
     <button class="tab" onclick="openTab(event, 'tab-3')">
       <div><span>MÚSICA</span></div>
     </button>
-    <button class="tab" onclick="openTab(event, 'tab-4')">
-      <div><span>PLAYERS</span></div>
-    </button>
   </div>
   <div class="content">
     <div class="content__inner" id="tab-1">
@@ -39,20 +36,15 @@
     <div class="content__inner" id="tab-2">
       <div class="page">
         <div id="ui">
-    <p>Ejemplo texto</p>p>
+    <p>Hay lugares, personas, recuerdos y abrazos que se quedan con nosotros para siempre.</p>
       </div>
     </div>
     <div class="content__inner" id="tab-3">
       <div class="page">
-        <div class="youtube" id="taSubkjZUA4" style="width:620px;height:370px;"></div>
+        <div class="youtube" id="V_v4oGIT77Y" style="width:620px;height:370px;"></div>
       </div>
     </div>
-    <div class="content__inner" id="tab-4">
-      <div class="page">
-        <p>Miaow then turn around and show you my bum flee in terror at cucumber discovered on floor. Terrorize the hundred-and-twenty-pound rottweiler and steal his bed, not sorry sleep on dog bed, force dog to sleep on floor and grab pompom in mouth and put in water dish cats are fats i like to pets them they like to meow back present belly, scratch hand when stroked. </p>
-        <p>Bleghbleghvomit my furball really tie the room together love asdflkjaertvlkjasntvkjn (sits on keyboard) but bawl under human beds.</p>
-      </div>
-    </div>
+   
   </div>
   <center><h5><font color="#912cc4">All rights reserved to the respective owners/founders. Adapt by Hayk iiADJii (822328288)</h5></center>
 </div>
