--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="folder">
   <div class="tabs">
     <button class="tab active" onclick="openTab(event, 'tab-1')">
-      <div><span>HOGAR</span></div>
+      <div><span>AMOR</span></div>
     </button>
     <button class="tab" onclick="openTab(event, 'tab-2')">
       <div><span>AMIGOS</span></div>
@@ -30,21 +30,21 @@
   </div>
   <div class="content">
     <div class="content__inner" id="tab-1">
-        <img src="http://i.imgur.com/8XkZEe5h.gif" width="200" height="400"><img src="http://i.imgur.com/wWyr0PTh.gif" width="200" height="400"><img src="http://i.imgur.com/Gn68TByh.gif" width="200" height="400">
+      <div class="page">
+         <img src="http://i.imgur.com/8XkZEe5h.gif" width="200" height="400"><img src="http://i.imgur.com/wWyr0PTh.gif" width="200" height="400"><img src="http://i.imgur.com/Gn68TByh.gif" width="200" height="400">
       </div>
     </div>
     <div class="content__inner" id="tab-2">
       <div class="page">
-        <div id="ui">
-    <p>Hay lugares, personas, recuerdos y abrazos que se quedan con nosotros para siempre.</p>
+        <p>Hay lugares, personas, recuerdos y abrazos que se quedan con nosotros para siempre.</p>
       </div>
     </div>
     <div class="content__inner" id="tab-3">
       <div class="page">
-        <div class="youtube" id="V_v4oGIT77Y" style="width:620px;height:370px;"></div>
+        <iframe src="https://www.youtube.com/embed/V_v4oGIT77Y" width="560" height="315" title="A YouTube video" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
-   
+    
   </div>
   <center><h5><font color="#912cc4">All rights reserved to the respective owners/founders. Adapt by Hayk iiADJii (822328288)</h5></center>
 </div>
