--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="content">
     <div class="content__inner" id="tab-1">
       <div class="page">
-         <img src="http://i.imgur.com/8XkZEe5h.gif" width="200" height="400"><img src="http://i.imgur.com/wWyr0PTh.gif" width="200" height="400"><img src="http://i.imgur.com/Gn68TByh.gif" width="200" height="400">
+         <img src="https://i.postimg.cc/YSD4sHyK/video1romi.gif"><img src="https://i.postimg.cc/MH5g7qYN/Romi3vid33.gif"><img src="https://i.postimg.cc/vZFZqv7z/romi2vid.gif">
       </div>
     </div>
     <div class="content__inner" id="tab-2">
